--- a/flappy/index.html
+++ b/flappy/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird JS</title>
+    <title>Flappy Diamond</title>
     <meta name="author" content="Nathan S. Santos, nathansilvasantos@gmail.com">
     <meta property="og:title" content="Flappy Bird JS">
     <meta property="og:type" content="game">
