--- a/flappy/index.html
+++ b/flappy/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="content">
-    <h1>Flappy Bird JS</h1>
+    <h1>Flappy Diamond</h1>
     <div flappy-bird></div>
     <script src="js/flappy.js"></script>
 </body>
